--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <h1>Hello, World!</h1>
+</head>
+ <body>
+<p>
+    <a href="https://flatironschool.com">Flatiron School</a>
+</p>
+<link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Cat Perry's Favorite Cats</title>
+</body>
+<!-- This is a comment! -->
+</html>
